@@ -100,7 +100,7 @@
     </p>
 
     <ul>
-        {if $googleMapsEnabled && !$userIsAtHotspot}
+        {if $googleMapsEnabled} {* This needs to be imporved before being deployed  {if $googleMapsEnabled && !$userIsAtHotspot}*}
             <li><a href="{$base_url_path}hotspots_map.php">{"Deployed HotSpots map"|_}</a></li>
         {/if}
         <li><a href="{$base_url_path}hotspot_status.php">{"Deployed HotSpots status with coordinates"|_}</a></li>
